New scheme for matching tags, update unit tests

--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -47,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB.open('pytest')"
+    "# DB.open('pytest')\n",
+    "DB.open('flat')"
    ]
   },
   {
@@ -133,7 +134,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Account: <Ac equity equity None>>, <Account: <Ac assets:bank:checking assets checking>>, <Account: <Ac assets:bank:savings assets savings>>, <Account: <Ac expenses:car expenses None>>, <Account: <Ac expenses:car:payment expenses None>>, <Account: <Ac expenses:car:fuel expenses None>>, <Account: <Ac expenses:food expenses None>>, <Account: <Ac expenses:food:groceries expenses groceries>>, <Account: <Ac expenses:food:restaurant expenses dining>>, <Account: <Ac expenses:home expenses None>>, <Account: <Ac expenses:home:household expenses household>>, <Account: <Ac expenses:home:mortgage expenses mortgage>>, <Account: <Ac expenses:travel expenses None>>, <Account: <Ac income:yoyodyne income None>>, <Account: <Ac liabilities:chase:visa liabilities visa>>, <Account: <Ac equity equity None>>, <Account: <Ac equity equity None>>, <Account: <Ac equity equity None>>, <Account: <Ac equity equity None>>]"
+       "[<Account: <Ac equity equity None>>, <Account: <Ac assets:bank:checking assets checking>>, <Account: <Ac assets:bank:savings assets savings>>, <Account: <Ac expenses:car expenses None>>, <Account: <Ac expenses:car:payment expenses None>>, <Account: <Ac expenses:car:fuel expenses None>>, <Account: <Ac expenses:food expenses None>>, <Account: <Ac expenses:food:groceries expenses groceries>>, <Account: <Ac expenses:food:restaurant expenses dining>>, <Account: <Ac expenses:home expenses None>>, <Account: <Ac expenses:home:household expenses household>>, <Account: <Ac expenses:home:mortgage expenses mortgage>>, <Account: <Ac expenses:travel expenses None>>, <Account: <Ac income:yoyodyne income None>>, <Account: <Ac liabilities:chase:visa liabilities visa>>, <Account: <Ac equity equity None>>]"
       ]
      },
      "execution_count": 6,
@@ -258,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "['admin', 'config', 'dev', 'finances', 'local', 'pytest']"
+       "['admin', 'config', 'dev', 'errors', 'finances', 'local', 'newdates', 'pytest']"
       ]
      },
      "execution_count": 12,
@@ -327,7 +328,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('688d868f94e4e84ee4a8b97a'),\n",
+       "{'_id': ObjectId('68d58be4d827ac4e7ac33e5d'),\n",
        " 'name': 'equity',\n",
        " 'category': 'equity'}"
       ]
@@ -350,12 +351,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'transaction', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'2\\xa3\\n\\xe1:\\x97H]\\xa0\\xf5\\xb1\\xe8;@\\xf0\\x1a', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
-      "{'name': 'entry', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\x9c\\x8cXy\\xbavO\\xe7\\xb6\\x84\\xad:\\xc7\\xd4\\x92\\xb1', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
-      "{'name': 'account', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xab\\xc2IU\\xaaYI\\xed\\xa7%\\xff\\xabfQ\\xaa\\xa8', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
-      "{'name': 'dexter', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xb3P\\xd5\\xe4\\x12~Ny\\xbcj\\xcd\\xc9O\\x9f}+', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
-      "{'name': 'bar', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xb4\\x1b\\xa2\\x18q\\x1aCD\\xaf\\x86\\xaf\\x18\\xc5vY\\x9a', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
-      "{'name': 'foo', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xe1\\x83\\xb3\\xa0\\xa5\\xd1C\\xd2\\xb9\\x8e. |\\x12\\x11\\x16', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n"
+      "{'name': 'account', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'Z6\\xa1,/\\xfeA\\x82\\x86(\\x88\\xccD\\x87\\xd4\\xd8', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
+      "{'name': 'dexter', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xadp53*\\x00Hk\\xb1*\\xa2\\x00\\xdc\\xf8\\xf6\\x80', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
+      "{'name': 'entry', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xb7\\xc2\\xdd\\x8f\\xd1\\xd6E\\xc4\\x85J\\x1fr\\x19D(e', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
+      "{'name': 'transaction', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xfay\\xf4-\\x03.@\\xa7\\x97\\rk\\x876\\x1d\\xc9\\xcb', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n"
      ]
     }
    ],
@@ -373,12 +372,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "transaction\n",
-      "entry\n",
       "account\n",
       "dexter\n",
-      "bar\n",
-      "foo\n"
+      "entry\n",
+      "transaction\n"
      ]
     }
    ],
@@ -420,7 +417,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('688d868f94e4e84ee4a8b97a'),\n",
+       "{'_id': ObjectId('68d58be4d827ac4e7ac33e5d'),\n",
        " 'name': 'equity',\n",
        " 'category': 'equity'}"
       ]
@@ -443,25 +440,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('688d868f94e4e84ee4a8b97a'), 'name': 'equity', 'category': 'equity'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b97b'), 'name': 'assets:bank:checking', 'category': 'assets', 'abbrev': 'checking', 'parser': 'occu'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b97c'), 'name': 'assets:bank:savings', 'category': 'assets', 'abbrev': 'savings', 'parser': 'occu'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b97d'), 'name': 'expenses:car', 'category': 'expenses'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b97e'), 'name': 'expenses:car:payment', 'category': 'expenses'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b97f'), 'name': 'expenses:car:fuel', 'category': 'expenses'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b980'), 'name': 'expenses:food', 'category': 'expenses'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b981'), 'name': 'expenses:food:groceries', 'category': 'expenses', 'abbrev': 'groceries'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b982'), 'name': 'expenses:food:restaurant', 'category': 'expenses', 'abbrev': 'dining'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b983'), 'name': 'expenses:home', 'category': 'expenses'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b984'), 'name': 'expenses:home:household', 'category': 'expenses', 'abbrev': 'household'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b985'), 'name': 'expenses:home:mortgage', 'category': 'expenses', 'abbrev': 'mortgage'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b986'), 'name': 'expenses:travel', 'category': 'expenses'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b987'), 'name': 'income:yoyodyne', 'category': 'income'}\n",
-      "{'_id': ObjectId('688d869094e4e84ee4a8b988'), 'name': 'liabilities:chase:visa', 'category': 'liabilities', 'abbrev': 'visa', 'parser': 'chase'}\n",
-      "{'_id': ObjectId('688d872e78b990a004faaedb'), 'name': 'equity', 'category': 'equity'}\n",
-      "{'_id': ObjectId('688d8795ed4e83292fd6efd9'), 'name': 'equity', 'category': 'equity'}\n",
-      "{'_id': ObjectId('688d87cb5fe4fe42024a0c49'), 'name': 'equity', 'category': 'equity'}\n",
-      "{'_id': ObjectId('688d88464b2f783848fb228c'), 'name': 'equity', 'category': 'equity'}\n"
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e5d'), 'name': 'equity', 'category': 'equity'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e5e'), 'name': 'assets:bank:checking', 'category': 'assets', 'abbrev': 'checking', 'parser': 'occu'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e5f'), 'name': 'assets:bank:savings', 'category': 'assets', 'abbrev': 'savings', 'parser': 'occu'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e60'), 'name': 'expenses:car', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e61'), 'name': 'expenses:car:payment', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e62'), 'name': 'expenses:car:fuel', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e63'), 'name': 'expenses:food', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e64'), 'name': 'expenses:food:groceries', 'category': 'expenses', 'abbrev': 'groceries'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e65'), 'name': 'expenses:food:restaurant', 'category': 'expenses', 'abbrev': 'dining'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e66'), 'name': 'expenses:home', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e67'), 'name': 'expenses:home:household', 'category': 'expenses', 'abbrev': 'household'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e68'), 'name': 'expenses:home:mortgage', 'category': 'expenses', 'abbrev': 'mortgage'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e69'), 'name': 'expenses:travel', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e6a'), 'name': 'income:yoyodyne', 'category': 'income'}\n",
+      "{'_id': ObjectId('68d58be4d827ac4e7ac33e6b'), 'name': 'liabilities:chase:visa', 'category': 'liabilities', 'abbrev': 'visa', 'parser': 'chase'}\n",
+      "{'_id': ObjectId('68dd4ab246c643cc299d8abe'), 'name': 'equity', 'category': 'equity'}\n"
      ]
     }
    ],
@@ -1227,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1239,7 @@
        "''"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,16 +1250,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Tag.U: '#unpaired'>, <Tag.U: '#unpaired'>, <Tag.U: '#unpaired'>]"
+       "[]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,25 +1270,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "e.tags.append(Tag.U)"
+    "# e.tags.append(Tag.U)\n",
+    "e.tags.append('#unpaired')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Entry: <En 2024-01-02 assets:bank:checking +$5000.0 [<Tag.U: '#unpaired'>, <Tag.U: '#unpaired'>, <Tag.U: '#unpaired'>, <Tag.U: '#unpaired'>]>>"
+       "<Entry: <En 2024-12-31 assets:occu:buckets +$108038.57 ['#unpaired']>>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,19 +1300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Tag.U: '#unpaired'>,\n",
-       " <Tag.U: '#unpaired'>,\n",
-       " <Tag.U: '#unpaired'>,\n",
-       " <Tag.U: '#unpaired'>]"
+       "['#unpaired']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1335,7 @@
     {
      "data": {
       "text/plain": [
-       "<Entry: <En 2024-01-02 assets:bank:checking +$5000.0 [<Tag.U: '#unpaired'>, <Tag.U: '#unpaired'>, <Tag.U: '#unpaired'>, <Tag.U: '#unpaired'>]>>"
+       "<Entry: <En 2024-01-02 assets:bank:checking +$5000.0 [<Tag.U: '#unpaired'>]>>"
       ]
      },
      "execution_count": 64,
@@ -1353,6 +1345,153 @@
    ],
    "source": [
     "e.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "761"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Entry.objects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Entry: <En 2024-01-02 assets:bank:checking +$5000.0 [<Tag.U: '#unpaired'>]>>]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list(Entry.objects(tags=Tag.U))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Entry: <En 2024-12-31 assets:occu:buckets +$108038.57 ['#unpaired']>>]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(Entry.objects(tags='#unpaired'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Entry: <En 2024-01-02 assets:bank:checking +$5000.0 [<Tag.U: '#unpaired'>]>>]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list(Entry.objects(tags__exact=Tag.U))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Entry: <En 2024-12-31 assets:occu:buckets +$108038.57 ['#unpaired']>>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(Entry.objects(tags__iregex='unp'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Entry.objects(tags__contains='unpaired'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "760"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Entry.objects(tags__not__contains='unpaired'))"
    ]
   },
   {
