--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DB.open('pytest')\n",
-    "DB.open('flat')"
+    "DB.open('pytest')\n",
+    "#DB.open('flat')"
    ]
   },
   {
