--- a/sandbox/mongo_playground.ipynb
+++ b/sandbox/mongo_playground.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e0193e66",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "060c3e56",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f9aedc94",
    "metadata": {},
    "outputs": [],
@@ -42,19 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0cd3a211",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Tr 2024-03-10 liabilities:chase:visa -> expenses:home:household $50.0 Home Depot []>\n",
-      "<Tr 2024-03-12 expenses:home:household -> liabilities:chase:visa $25.0 Home Depot []>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for t in Transaction.objects(description__contains='Home'):\n",
     "    print(t)"
@@ -62,17 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "c11151ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "fc6ae547",
    "metadata": {},
    "outputs": [
@@ -103,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "605fd55d",
    "metadata": {},
    "outputs": [
@@ -113,7 +104,7 @@
        "2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "54fcf416",
    "metadata": {},
    "outputs": [
@@ -144,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "76ec56b9",
    "metadata": {},
    "outputs": [
@@ -154,7 +145,7 @@
        "2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "0d13c3af",
    "metadata": {},
    "outputs": [
@@ -185,8 +176,202 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "9bbd6650",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<En 2024-01-02 income:yoyodyne +$5000.0 ['#budget']>\n",
+      "<En 2024-01-02 expenses:food -$500.0 ['#budget']>\n",
+      "<En 2024-01-02 expenses:home -$2500.0 ['#budget']>\n",
+      "<En 2024-01-02 expenses:car -$1000.0 ['#budget']>\n",
+      "<En 2024-01-02 expenses:travel -$500.0 ['#budget']>\n",
+      "<En 2024-01-02 equity -$500.0 ['#budget']>\n",
+      "<En 2024-02-02 income:yoyodyne +$5000.0 ['#budget']>\n",
+      "<En 2024-02-02 expenses:food -$500.0 ['#budget']>\n",
+      "<En 2024-02-02 expenses:home -$2500.0 ['#budget']>\n",
+      "<En 2024-02-02 expenses:car -$1000.0 ['#budget']>\n",
+      "<En 2024-02-02 expenses:travel -$500.0 ['#budget']>\n",
+      "<En 2024-02-02 equity -$500.0 ['#budget']>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in DB.select(Entry, tag='budget'):\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "512b6697",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = list(DB.select(Entry, tag='budget'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4a223ca5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = lst[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "434e6f85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#budget']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "cee6b3d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.update(pull__tags='#budget')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6b525fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Entry: <En 2024-01-02 expenses:food -$500.0 ['#budget']>>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d76d4849",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Entry: <En 2024-01-02 expenses:food -$500.0 []>>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.reload()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7ed2a668",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Entry: <En 2024-01-02 expenses:food -$500.0 []>>,\n",
+       " <Entry: <En 2024-01-02 expenses:home -$2500.0 ['#budget']>>,\n",
+       " <Entry: <En 2024-01-02 expenses:car -$1000.0 ['#budget']>>,\n",
+       " <Entry: <En 2024-01-02 expenses:travel -$500.0 ['#budget']>>,\n",
+       " <Entry: <En 2024-01-02 equity -$500.0 ['#budget']>>,\n",
+       " <Entry: <En 2024-02-02 income:yoyodyne +$5000.0 ['#budget']>>,\n",
+       " <Entry: <En 2024-02-02 expenses:food -$500.0 ['#budget']>>,\n",
+       " <Entry: <En 2024-02-02 expenses:home -$2500.0 ['#budget']>>,\n",
+       " <Entry: <En 2024-02-02 expenses:car -$1000.0 ['#budget']>>,\n",
+       " <Entry: <En 2024-02-02 expenses:travel -$500.0 ['#budget']>>,\n",
+       " <Entry: <En 2024-02-02 equity -$500.0 ['#budget']>>]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7f1fd464",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<En 2024-01-02 expenses:food -$500.0 []>\n",
+      "<En 2024-01-02 expenses:home -$2500.0 ['#budget']>\n",
+      "<En 2024-01-02 expenses:car -$1000.0 ['#budget']>\n",
+      "<En 2024-01-02 expenses:travel -$500.0 ['#budget']>\n",
+      "<En 2024-01-02 equity -$500.0 ['#budget']>\n",
+      "<En 2024-02-02 income:yoyodyne +$5000.0 ['#budget']>\n",
+      "<En 2024-02-02 expenses:food -$500.0 ['#budget']>\n",
+      "<En 2024-02-02 expenses:home -$2500.0 ['#budget']>\n",
+      "<En 2024-02-02 expenses:car -$1000.0 ['#budget']>\n",
+      "<En 2024-02-02 expenses:travel -$500.0 ['#budget']>\n",
+      "<En 2024-02-02 equity -$500.0 ['#budget']>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in lst:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "154b3b10",
+   "id": "a5a3f6eb",
    "metadata": {},
    "outputs": [],
    "source": []
